--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_script:
 - base64 --decode --ignore-garbage ~/.ssh/travis_rsa_64 > ~/.ssh/id_rsa
 - chmod 600 ~/.ssh/id_rsa
 - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+- bundle exec rake setup_github_pages[$REPO]
+- git checkout -- _config.yml
 script:
 - bundle exec rake generate
 after_script:
