--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
 - bundle exec rake generate
 after_script:
 - bundle exec rake deploy
+sudo: false
 env:
   global:
   - REPO="git@github.com:alvarogarcia7/alvarogarcia7.github.io"
