--- a/config.toml
+++ b/config.toml
@@ -106,7 +106,7 @@ articles = "/:section/:year/:month/:day/:title/"
 	## continue_reading = "Would you like to know more?"
 
 	# Google analytics code
-	googleAnalytics = "google analytics"
+	googleAnalytics = "UA-41008374-3"
 
 	# disqus shortcode
 	# disable comments for a specific post by adding "comments: false" in its frontmatter
