--- a/config.toml
+++ b/config.toml
@@ -110,7 +110,7 @@ articles = "/:section/:year/:month/:day/:title/"
 
 	# disqus shortcode
 	# disable comments for a specific post by adding "comments: false" in its frontmatter
-	disqusShortname = "Your Google Analytics tracking code"
+	disqusShortname = "thelongwaythroughsoftwarecraftsmanship"
 
 	# sidebar links
 	github = "https://github.com/alvarobiz/"
