--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: go
+# Handle git submodules yourself
+git:
+    submodules: false
+# Use sed to replace the SSH URL with the public URL, then initialize submodules
+before_install:
+    - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+    - git submodule update --init --recursive
 install: go get -v github.com/spf13/hugo
 before_script:
 - git config --global user.name "alvarogarcia7 (via Travis CI)"
