--- a/config.toml
+++ b/config.toml
@@ -131,11 +131,10 @@ articles = "/:section/:year/:month/:day/:title/"
 	# 404.html header and text -both support markdown
 	notfound_header = "These are not the posts you're looking for"
 
-	notfound_text = """Please either go back or use the navigation/sidebar menus.
-	"""
+	notfound_text = """Please either go back or use the navigation/sidebar menus"""
 
-        # Set to true to hide ReadingTime on posts
-        disableReadingTime = false
+    # Set to true to hide ReadingTime on posts
+    disableReadingTime = false
 
 # blackfriday is Hugo's markdown engine. Options are at: https://gohugo.io/overview/configuration/ (scroll down to "Configure Blackfriday rendering")
 [blackfriday]
