[CI] defect: the code is not pygmented

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
     - tar xzf hugo_0.17_Linux-64bit.tar.gz
     - chmod +x hugo_0.17_linux_amd64/hugo_0.17_linux_amd64
     - mv hugo_0.17_linux_amd64/hugo_0.17_linux_amd64 hugo
+    - pip install pygments
 before_script:
 - git config --global user.name "alvarogarcia7 (via Travis CI)"
 - git config --global user.email "alvarogarcia7@users.noreply.github.com"
