--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: required
 language: go
 # Handle git submodules yourself
 git:
@@ -12,7 +11,7 @@ install:
     - tar xzf hugo_0.17_Linux-64bit.tar.gz
     - chmod +x hugo_0.17_linux_amd64/hugo_0.17_linux_amd64
     - mv hugo_0.17_linux_amd64/hugo_0.17_linux_amd64 hugo
-    - sudo pip install pygments
+    - pip install --user pygments
 before_script:
 - git config --global user.name "alvarogarcia7 (via Travis CI)"
 - git config --global user.email "alvarogarcia7@users.noreply.github.com"
