--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Setup hugo
         uses: peaceiris/actions-hugo@v2
         with:
+          # Check the version here: https://formulae.brew.sh/api/formula/hugo.json
           hugo-version: "0.82.0"
 
       - name: Build
